# Practic_2026

./: CMakeLists.txt  test_proj1.cpp  test_proj1.h
